# ros2_waypoint_follower

./: .gitignore  LICENSE  README.md
src/robotics_control/: CMakeLists.txt  package.xml
src/robotics_control/include/robotics_control/control/: lqr_controller.hpp  pid_controller.hpp  state_space.hpp
src/robotics_control/include/robotics_control/estimation/: kalman_filter.hpp
src/robotics_control/include/robotics_control/maths/: transform.h
src/robotics_control/src/: CMakeLists.txt  kalman_filter.cpp  lqr_controller.cpp  main.cpp  pid_controller.cpp  state_space.cpp  transform.cpp
src/waypoint_follower/: CMakeLists.txt  package.xml
src/waypoint_follower/config/: goal_poses.txt  nav2_params.yaml  path_tracking.yaml  robot.urdf  warehouse.world  waypoint_follower_params.yaml  waypoints_course.yaml  waypoints_default_path.hpp.in  waypoints_sample.yaml
src/waypoint_follower/include/waypoint_follower/: odometry_fusion.hpp  path_tracker_controller.hpp  trajectory_smoother.hpp  waypoint_follower_node.hpp  waypoint_loader.hpp  waypoint_types.hpp
src/waypoint_follower/launch/: gazebo_sim.launch.py  sim.launch.py  waypoint_follower.launch.py
src/waypoint_follower/rviz/: waypoint_follower.rviz
src/waypoint_follower/scripts/: physics_simulator.py  setup_and_build.sh
src/waypoint_follower/src/: odometry_fusion.cpp  path_tracker_controller.cpp  trajectory_smoother.cpp  waypoint_follower_node.cpp  waypoint_follower_node_main.cpp  waypoint_loader.cpp
src/waypoint_follower/test/: test_odometry_fusion.cpp  test_path_tracker.cpp  test_trajectory_smoother.cpp  test_waypoint_loader.cpp
