<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_follower</name>
  <version>0.0.0</version>
  <description>ROS2 Waypoint Follower with robotics control</description>
  
  <maintainer email="hajiharsh598@gmail.com">root</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_msgs</depend>
  
  <!-- External Libraries -->
  <depend>Eigen3</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>
  
  <!-- Local dependencies -->
  <depend>robotics_control</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
