<?xml version="1.0"?>
<package format="2">
  <name>waypoint_follower</name>
  <version>1.0.0</version>
  <description>ROS2 Waypoint Following with Path Tracking Control</description>
  
  <maintainer email="av-team@example.com">AV Team</maintainer>
  <license>Apache-2.0</license>
  
  <url type="website">https://github.com/HarshMulodhia/ros2_waypoint_follower</url>
  <url type="repository">https://github.com/HarshMulodhia/ros2_waypoint_follower.git</url>
  <url type="bugtracker">https://github.com/HarshMulodhia/ros2_waypoint_follower/issues</url>
  
  <author email="harshmulodhia@example.com">Harsh Mulodhia</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>robotics_control</build_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>robotics_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
